syntax = "proto3";
package cosmos.staking.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/staking/types";

// Description defines a validator description.
message Description {
  option (gogoproto.equal) = true;
  string moniker          = 1;
  string identity         = 2;
  string website          = 3;
  string security_contact = 4;
  string details          = 5;
}

// CommissionRates defines the initial commission rates to be used for creating a validator.
message CommissionRates {
  option (gogoproto.equal) = true;
  string rate           = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string max_rate       = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string max_change_rate = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

// MsgCreateValidator defines a SDK message for creating a new validator.
message MsgCreateValidator {
  option (gogoproto.equal) = false;
  Description              description       = 1 [(gogoproto.nullable) = false];
  CommissionRates          commission        = 2 [(gogoproto.nullable) = false];
  string                   min_self_delegation = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string                   delegator_address = 4;
  string                   validator_address = 5;
  google.protobuf.Any      pubkey            = 6 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
  cosmos.base.v1beta1.Coin value             = 7 [(gogoproto.nullable) = false];
}

message MsgCreateValidatorResponse {}

// MsgEditValidator defines a SDK message for editing an existing validator.
message MsgEditValidator {
  option (gogoproto.equal) = false;
  Description description       = 1 [(gogoproto.nullable) = false];
  string      validator_address  = 2;
  string      commission_rate    = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  string      min_self_delegation = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"];
}

message MsgEditValidatorResponse {}

// MsgDelegate defines a SDK message for performing a delegation of coins.
message MsgDelegate {
  option (gogoproto.equal) = false;
  string                   delegator_address = 1;
  string                   validator_address = 2;
  cosmos.base.v1beta1.Coin amount            = 3 [(gogoproto.nullable) = false];
}

message MsgDelegateResponse {}

// MsgBeginRedelegate defines a SDK message for performing a redelegation.
message MsgBeginRedelegate {
  option (gogoproto.equal) = false;
  string                   delegator_address     = 1;
  string                   validator_src_address  = 2;
  string                   validator_dst_address  = 3;
  cosmos.base.v1beta1.Coin amount                = 4 [(gogoproto.nullable) = false];
}

message MsgBeginRedelegateResponse {
  google.protobuf.Timestamp completion_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

// MsgUndelegate defines a SDK message for performing an undelegation.
message MsgUndelegate {
  option (gogoproto.equal) = false;
  string                   delegator_address = 1;
  string                   validator_address = 2;
  cosmos.base.v1beta1.Coin amount            = 3 [(gogoproto.nullable) = false];
}

message MsgUndelegateResponse {
  google.protobuf.Timestamp completion_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}
